--- a/src/InterfaceGraphique/PageAccueil.form
+++ b/src/InterfaceGraphique/PageAccueil.form
@@ -100,7 +100,7 @@
                       <Component id="connect" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="signup" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="62" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
